--- a/.gitattributes
+++ b/.gitattributes
@@ -3,6 +3,8 @@
 ###############################################################################
 * text=auto
 *.js binary
+*.json binary
+*.css binary
 ###############################################################################
 # Set default behavior for command prompt diff.
 #
