--- a/.gitattributes
+++ b/.gitattributes
@@ -3,6 +3,8 @@
 ###############################################################################
 * text=auto
 *.js binary
+*.min.js binary
+*.min.css binary
 *.json binary
 *.css binary
 ###############################################################################
