--- a/GitHubDeploymentTest/GitHubDeploymentTest.csproj
+++ b/GitHubDeploymentTest/GitHubDeploymentTest.csproj
@@ -27,4 +27,8 @@
     <ServiceWorker Include="wwwroot\service-worker.js" PublishedContent="wwwroot\service-worker.published.js" />
   </ItemGroup>
 
+  <Target Name="CopyIndexTo404" AfterTargets="Publish">
+	<Copy SourceFiles="$(PublishDir)index.html" DestinationFiles="$(PublishDir)404.html" />
+  </Target>
+
 </Project>
