--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,7 +5,7 @@ on:
     paths:
       - GitHubDeploymentTest/**
     branches:
-      - main   # or master, depending on your default branch
+      - master   # or master, depending on your default branch
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
