--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,7 +42,7 @@ jobs:
         run: cp release/wwwroot/index.html release/wwwroot/404.html
 
       - name: Deploy to GitHub Pages
-        uses: TheBoru/GitHubDeploymentTest@bd967d94d27e9ed8a1e65c8566b7db08bb2199f1/actions-gh-pages@v4
+        uses: TheBoru/GitHubDeploymentTest/actions-gh-pages@bd967d94d27e9ed8a1e65c8566b7db08bb2199f1
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./release/wwwroot
