--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,28 +2,20 @@ name: Deploy Blazor WebAssembly to GitHub Pages
 
 on:
   push:
-    paths:
-      - GitHubDeploymentTest/**
     branches:
-      - master   # or master, depending on your default branch
+      - master   # Runs whenever you push to main
 
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-  # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
   contents: read
   pages: write
   id-token: write
 
-# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
-# However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
 concurrency:
   group: "pages"
-  cancel-in-progress: false
+  cancel-in-progress: true
 
 jobs:
-  build-and-deploy:
+  build:
     runs-on: ubuntu-latest
 
     steps:
@@ -33,17 +25,29 @@ jobs:
       - name: Setup .NET
         uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: '9.0.x'   # or 7.0.x if using .NET 7
+          dotnet-version: '8.0.x'   # Change if using .NET 7 or 6
 
       - name: Publish Blazor WebAssembly
-        run: dotnet publish GitHubDeploymentTest -c Release -o release
+        run: dotnet publish -c Release -o release
 
-      - name: Copy index.html to 404.html
+      - name: Update base href for GitHub Pages
+        run: sed -i 's|<base href="/" />|<base href="/GitHubDeploymentTest/" />|' release/wwwroot/index.html
+
+      - name: Copy index.html to 404.html (for client-side routing)
         run: cp release/wwwroot/index.html release/wwwroot/404.html
 
-      - name: Deploy to GitHub Pages
-        uses: TheBoru/GitHubDeploymentTest/actions-gh-pages@bd967d94d27e9ed8a1e65c8566b7db08bb2199f1
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./release/wwwroot
-          publish_branch: gh-pages
+          path: ./release/wwwroot
+
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
