--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,10 +28,10 @@ jobs:
           dotnet-version: '9.0.x'   # Change if using .NET 7 or 6
 
       - name: Publish Blazor WebAssembly
-        run: dotnet publish -c Release -o release
+        run: dotnet publish -c Release -o publish_output
 
       - name: Update base href for GitHub Pages
-        run: sed -i 's|<base href="/" />|<base href="/GitHubDeploymentTest/" />|' release/wwwroot/index.html
+        run: sed -i 's|<base href="/" />|<base href="/GitHubDeploymentTest/" />|' publish_output/wwwroot/index.html
 
       - name: Copy index.html to 404.html (for client-side routing)
         run: cp release/wwwroot/index.html release/wwwroot/404.html
