--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,7 +34,7 @@ jobs:
         run: sed -i 's|<base href="/" />|<base href="/GitHubDeploymentTest/" />|' publish_output/wwwroot/index.html
 
       - name: Copy index.html to 404.html (for client-side routing)
-        run: cp release/wwwroot/index.html release/wwwroot/404.html
+        run: cp publish_output/wwwroot/index.html publish_output/wwwroot/404.html
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
