--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy Blazor WebAssembly to GitHub Pages
 on:
   push:
     branches:
-      - master   # Runs whenever you push to main
+      - main   # Runs whenever you push to main
 
 permissions:
   contents: read
