--- a/GitHubDeploymentTest/GitHubDeploymentTest.csproj
+++ b/GitHubDeploymentTest/GitHubDeploymentTest.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
+<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
@@ -18,7 +18,8 @@
     <None Remove="Publish\**" />
   </ItemGroup>
 
-  <ItemGroup>
+  <ItemGroup>    <PackageReference Include="Syncfusion.Blazor.Grid" Version="31.1.20" />
+    <PackageReference Include="Syncfusion.Blazor.Themes" Version="31.1.20" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="9.0.8" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="9.0.8" PrivateAssets="all" />
   </ItemGroup>
